chore: Load service api github 	using api.github.com/repos 	get datas for use aplication

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "@typescript-eslint"
     ],
     "rules": {
+      "camelcase":"off",
       "react/jsx-filename-extension": [0, { "extensions": [".js", ".jsx"] }],
       "import/extensions": [
         "error",
