Chore: Got params 	get paramns of route / to /repository

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,8 @@
         "@typescript-eslint"
     ],
     "rules": {
-      "camelcase":"off",
+      "react/jsx-one-expression-per-line": "off",
+      "camelcase": "off",
       "react/jsx-filename-extension": [0, { "extensions": [".js", ".jsx"] }],
       "import/extensions": [
         "error",
