--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,9 +23,13 @@
     "plugins": [
         "react",
         "prettier",
-        "@typescript-eslint"
+        "@typescript-eslint",
+        "react-hooks"
     ],
     "rules": {
+      "prettier/prettier": "off",
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn",
       "react/jsx-one-expression-per-line": "off",
       "camelcase": "off",
       "react/jsx-filename-extension": [0, { "extensions": [".js", ".jsx"] }],
